--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@
   var dps = []; // dataPoints
   var chart = new CanvasJS.Chart("chartContainer", {
     title :{
-      text: "Bangle.js HeartRate Monitoring Over Time"
+      text: "Bangle.js PPG Over Time"
     },
     axisY:{
       title: "Heart Rate",
