--- a/test.html
+++ b/test.html
@@ -13,9 +13,11 @@
   // Code to upload to Bangle.js
   var BANGLE_CODE = `
   Bangle.setHRMPower(1)
-  Bangle.on('HRM',function(hrm) {
+  Bangle.on('HRM-raw',function(hrm) {
     var d = [
       "H",
+      hrm.raw,
+      hrm.filt,
       hrm.bpm,
       hrm.confidence
       ];
@@ -105,13 +107,15 @@
   function onLine(line) {
     console.log("RECEIVED:"+line);
     var d = line.split(",");
-    if (d.length==3 && d[0]=="H") {
+    if (d.length==5 && d[0]=="H") {
       // we have an HR monitor reading
       var hr_data = {
-        hr : parseInt(d[1]),
-        conf : parseInt(d[2]),
+        raw : parseInt(d[1]),
+        filt : parseInt(d[2]),
+        bpm : parseInt(d[3]),
+        conf : parseInt(d[4])
       };
-      updateChart(hr_data.hr);
+      updateChart(hr_data.raw);
     }
   }
 
