--- a/test.html
+++ b/test.html
@@ -127,7 +127,7 @@
         bpm : parseInt(d[3]),
         conf : parseInt(d[4])
       };
-      updateChart(hr_data.filt);
+      updateChart(hr_data.raw);
     }
   }
 
